# alertmanager-to-notion

./: .dockerignore  .gcloudignore  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  codecov.yml  deploy.sh  docker-compose.override.yml.template  docker-compose.yml  generate_diagrams.sh  main.py  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: cd-merge.yml  ci-pr.yml
app/: __init__.py  base.py  exceptions.py  models.py  settings.py
app/event_handlers/: __init__.py  check_site_for_update.py  notion.py
app/http_handlers/: __init__.py  call_alertmanager_to_notion.py  call_check_site_for_update.py
app/services/: notion.py
config/: .env.template
docker/: Dockerfile  ci.sh
docs/diagrams/: csfu_event_handler.mmd  hourly.mmd  http_request.mmd  main_flow.mmd
infra/: main.tf  terraform.tfvars.template  variables.tf
tests/: conftest.py
tests/fixtures/: common.py  website_content.py
tests/test_event_handlers/: test_alertmanager_to_notion.py  test_check_site_for_update.py
tests/test_http_handlers/: test_invoker.py
tests/test_services/: test_notion_service.py
